passage du pom.xml pour jdk 17